--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -207,7 +207,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -452,8 +452,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/_MyStuff/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=1.000 Y=5.000
-WindowSize=X=1434.000 Y=871.000
+ScreenPosition=X=0.667 Y=4.667
+WindowSize=X=1436.000 Y=873.333
 InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
@@ -1552,13 +1552,14 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/Control
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/_MyStuff/Materials/Green
-MRUItem1=/Game/_MyStuff/Materials/Specia_Stuff/RedWorldPosition
-MRUItem2=/Game/_MyStuff/Materials/Specia_Stuff/BlueFresnel
-MRUItem3=/Game/_MyStuff/Materials/Vertex_Normal
-MRUItem4=/Game/_MyStuff/Materials/M_MOUNTAIN_DRAGON2
+MRUItem0=/Game/_MyStuff/Materials/M_MOUNTAIN_DRAGON2
+MRUItem1=/Game/_MyStuff/Materials/Green
+MRUItem2=/Game/_MyStuff/Materials/Specia_Stuff/RedWorldPosition
+MRUItem3=/Game/_MyStuff/Materials/Specia_Stuff/BlueFresnel
+MRUItem4=/Game/_MyStuff/Materials/Vertex_Normal
 MRUItem5=/Game/_MyStuff/Materials/Yellow
 MRUItem6=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/3ColorBlend
 MRUItem7=/Game/QuadrapedCreatures/MountainDragon/Textures/T_MOUNTAIN_DRAGON_ILLUM
@@ -1808,4 +1809,7 @@ MRUItem3=/Game/InfinityBladeGrassLands/Maps/ElvenRuins
 
 [MessageLog]
 LastLogListing=MapCheck
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
 
